WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196532
output element doesn't react properly to node tree mutations
https://bugs.webkit.org/show_bug.cgi?id=196532
Summary
output element doesn't react properly to node tree mutations
Anne van Kesteren
Reported
2019-04-03 03:17:57 PDT
https://github.com/web-platform-tests/wpt/pull/16080
has tests and
https://github.com/whatwg/html/pull/4447
has a refactoring of the specification that makes it no longer rely on descendant change notifications.
Attachments
Patch
(24.54 KB, patch)
2021-05-13 20:59 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(24.50 KB, patch)
2021-05-13 21:15 PDT
,
Darin Adler
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(31.05 KB, patch)
2021-05-13 23:01 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(32.23 KB, patch)
2021-05-14 14:53 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2021-05-13 02:08:40 PDT
Context:
https://github.com/whatwg/html/issues/6516
Darin Adler
Comment 2
2021-05-13 10:00:10 PDT
Have we pulled that test in yet? I’d like to look at it; might tackle this bug.
Ryosuke Niwa
Comment 3
2021-05-13 15:55:15 PDT
(In reply to Darin Adler from
comment #2
)
> Have we pulled that test in yet? I’d like to look at it; might tackle this > bug.
Yes. It's at LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-output-element/mutations.window.html
Darin Adler
Comment 4
2021-05-13 18:33:57 PDT
Wow, this is easy to fix. I will.
Darin Adler
Comment 5
2021-05-13 18:34:38 PDT
Thank you for making this not be defined in terms of change notifications!
Darin Adler
Comment 6
2021-05-13 20:31:43 PDT
Comment hidden (obsolete)
The test seems to not match the specification. The test has a test case where the output element's value is set to the string "some". The specification says that should do a string replace all operation with that value. One result of that is that all the children are replaced. The test then sets the textContent of a child element to "y". But after the replace all operation, that child element is no longer one of the children, so that has no effect. The test expects that output.value will be "y" after that operation. Added a comment about this in GitHub:
https://github.com/web-platform-tests/wpt/pull/16080/commits/610c0a602dc302c9927ab976f0e75a60c505ab33#r632250067
Darin Adler
Comment 7
2021-05-13 20:59:02 PDT
Comment hidden (obsolete)
Created
attachment 428597
[details]
Patch
Darin Adler
Comment 8
2021-05-13 21:08:08 PDT
Comment hidden (obsolete)
I opened <
https://github.com/web-platform-tests/wpt/issues/28994
>. Anne, would love to hear your take on this.
Darin Adler
Comment 9
2021-05-13 21:15:00 PDT
Comment hidden (obsolete)
Created
attachment 428600
[details]
Patch
Darin Adler
Comment 10
2021-05-13 23:01:29 PDT
Comment hidden (obsolete)
Created
attachment 428603
[details]
Patch
Darin Adler
Comment 11
2021-05-14 09:46:56 PDT
All those EWS bubbles green; hoping for review soon.
Darin Adler
Comment 12
2021-05-14 14:53:02 PDT
Created
attachment 428665
[details]
Patch
Darin Adler
Comment 13
2021-05-14 14:53:18 PDT
Good news, the bug in the test was fixed back in March.
EWS Watchlist
Comment 14
2021-05-14 14:53:49 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 15
2021-05-14 19:05:29 PDT
Committed
r277527
(
237755@main
): <
https://commits.webkit.org/237755@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428665
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug